# rust-dynamic-plugin-graphql-system

./: .env  .gitignore  Cargo.toml  README.md
my-interface/: Cargo.toml
my-interface/src/: lib.rs
my-master/: Cargo.toml
my-master/src/: implement.rs  lib.rs  main.rs  route.rs
my-plugin-builder/: Cargo.toml
my-plugin-builder/src/: errors.rs  generate.rs  lib.rs
my-plugin-builder/src/demo/: bar.rs  foo.rs
