[package]
authors = ["Hzqi <Hzqi_110@hotmail.com>"]
edition = "2018"
name = "my-master"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5"
my-interface = {path = "../my-interface", version = "*"}
my-plugin-builder = {path = "../my-plugin-builder", version = "*"}
