[package]
authors = ["Hzqi <Hzqi_110@hotmail.com>"]
edition = "2018"
name = "my-master"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "0.5.6"
dotenv = "0.15.0"
dyn-clone = "1.0.4"
juniper = {version = "0.15.6", features = ["expose-test-schema"]}
juniper_warp = "0.6.4"
libloading = "0.5"
log = "0.4"
my-interface = {path = "../my-interface", version = "*"}
my-plugin-builder = {path = "../my-plugin-builder", version = "*"}
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"
